# texture-packer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  bitbucket-pipelines.yml  test.sh
src/: Config.cpp  Config.h  File.cpp  File.h  FileList.cpp  FileList.h  Image.cpp  Image.h  ImageList.cpp  ImageList.h  ImageSaver.cpp  ImageSaver.h  Imagesaver.cpp  Imagesaver.h  Log.cpp  Trim.cpp  Trim.h  Utils.cpp  Utils.h  bitmap.h  config.h  file.cpp  file.h  image.cpp  image.h  imagesaver.cpp  imagesaver.h  main.cpp  packer.cpp  packer.h  rect.cpp  rect.h  trim.cpp  trim.h  utils.cpp  utils.h
src/Atlas/: AtlasPacker.cpp  AtlasPacker.h  AtlasSize.cpp  AtlasSize.h  KDNode.cpp  KDNode.h  KDTreePacker.cpp  KDTreePacker.h  SimplePacker.cpp  SimplePacker.h
src/Types/: Bitmap.cpp  Types.h
src/atlas/: AtlasPacker.cpp  AtlasPacker.h  KDTreePacker.cpp  KDTreePacker.h  SimplePacker.cpp  SimplePacker.h
src/types/: bitmap.h  rect.h  size.h
